<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background"
    tools:context=".RequestFamilyGroupActivity">

    <TextView
        android:id="@+id/textView_request_ack"
        android:layout_width="313dp"
        android:layout_height="36dp"
        android:layout_marginTop="283dp"
        android:fontFamily="monospace"
        android:text="@string/RequestSent"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_confirmation_ack"
        android:layout_width="296dp"
        android:layout_height="27dp"
        android:layout_marginTop="30dp"
        android:fontFamily="monospace"
        android:text="@string/EmailConfirmation"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_request_ack" />

    <Button
        android:id="@+id/buttonHomePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@drawable/custom_button"
        android:fontFamily="monospace"
        android:text="@string/Continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_confirmation_ack" />

</androidx.constraintlayout.widget.ConstraintLayout>