<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background"
    tools:context=".CreateFamilyGroupActivity">


    <TextView
        android:id="@+id/Text_View_join_existing_family"
        android:layout_width="358dp"
        android:layout_height="44dp"
        android:layout_marginTop="180dp"
        android:fontFamily="monospace"
        android:text="@string/CreateNewFamily"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_enter_family_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:autofillHints="FamilyId"
        android:hint="@string/EnterFamilyId"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text_View_join_existing_family" />

    <Button
        android:id="@+id/buttonHomePage"
        android:layout_width="128dp"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        android:text="@string/FinishSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_enter_family_id" />
</androidx.constraintlayout.widget.ConstraintLayout>