<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewItemUploadActivity">

    <ImageButton
        android:id="@+id/imageButtonUploadImage3"
        android:layout_width="53dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/image_circ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.296"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:translationZ="1dp"/>

    <Button
        android:id="@+id/uploadBtn"
        android:layout_width="203dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/custom_signup"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.914" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="8dp">

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="410dp"
        android:layout_height="654dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/NewItemUpload"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/uploadImageView"
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:contentDescription="@string/image"
            android:src="@drawable/imageview" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_input_field"
                android:hint="@string/itemname" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerFamilyGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textViewDescription"
                android:layout_width="401dp"
                android:layout_height="80dp"
                android:hint="@string/itemdescription" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerPrivacy"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>